--- a/src/app/components/judges/dashboard/settings/settings.component.html
+++ b/src/app/components/judges/dashboard/settings/settings.component.html
@@ -8,7 +8,7 @@
                     <span id="links"><a>Cambiar foto de perfil</a></span>
                 </div>
             </div>
-            <span id="links"><a>Compartir redes sociales</a></span>
+            <span id="links" (click)="logout()"><a>Salir</a></span>
         </div>
         <div class="user-info">
             <form class="add-form">
