Some UI changes

--- a/src/app/components/administrator/dashboard/top-menu/top-menu.component.html
+++ b/src/app/components/administrator/dashboard/top-menu/top-menu.component.html
@@ -20,7 +20,7 @@
                 </button>
                 <button mat-menu-item>
                   <mat-icon (click)="logout()" >exit_to_app</mat-icon>
-                  <span (click)="logout()" >Salir</span>
+                  <span (click)="logout()" >Cerrar sesión</span>
                 </button>
               </mat-menu>
         </div>
