--- a/src/app/components/administrator/dashboard/fair-documents/fair-documents.component.html
+++ b/src/app/components/administrator/dashboard/fair-documents/fair-documents.component.html
@@ -6,7 +6,7 @@
                 <mat-form-field class="example-full-width" appearance="outline">
                     <mat-label>Filtrar Documentos</mat-label>
                     <input type="text" matInput (keyup)="applyFilter($event)">
-                    <mat-icon matSuffix>Buscar</mat-icon>
+                    <mat-icon matSuffix>search</mat-icon>
                 </mat-form-field>
             <button mat-raised-button class="add-button" onchange="onFileChange($event)" formControlName="file">Agregar</button>
         </form>
