--- a/src/app/components/judges/dashboard/recomendations-popup/recomendations-popup.component.html
+++ b/src/app/components/judges/dashboard/recomendations-popup/recomendations-popup.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <h2 class="modal-title" style="margin-bottom: 0;">Crear apelacion para el proyecto</h2>
+    <h2 class="modal-title" style="margin-bottom: 0;">Dar recomendaciones al proyecto</h2>
     <button type="button" class="btn btn-outline-danger close-btn" (click)="dismiss()">&times;
     </button>
 </div>
@@ -9,7 +9,7 @@
             <div class="row">
                 <div class="col-12">
                     <mat-form-field class="full-width" appearance="legacy">
-                        <mat-label>Reclamo</mat-label>
+                        <mat-label>Recomendación</mat-label>
                         <input class="full-width" matInput formControlName="recommendation">
                     </mat-form-field>
                 </div>
@@ -17,7 +17,7 @@
         
         <div class="modal-footer ">
             <button mat-raised-button type="button" id="submit-button" class="cancel-button" (click)="decline()">Cancelar</button>
-            <button mat-raised-button type="button" id="submit-button" class="add-button" (click)="accept()">Subir recomendacion</button>
+            <button mat-raised-button type="button" id="submit-button" class="add-button" (click)="accept()">Subir recomendación</button>
         </div>
     </form>    
 </div>
