--- a/src/app/components/students/dashboard/project-details/qualification/qualification.component.html
+++ b/src/app/components/students/dashboard/project-details/qualification/qualification.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <h2 class="modal-title" style="margin-bottom: 0;">Crear apelacion para el proyecto</h2>
+    <h2 class="modal-title" style="margin-bottom: 0;">Notas de los jueces</h2>
     <button type="button" class="btn btn-outline-danger close-btn" (click)="dismiss()">&times;
     </button>
 </div>
