--- a/src/app/components/students/dashboard/project-details/project-details.component.html
+++ b/src/app/components/students/dashboard/project-details/project-details.component.html
@@ -41,7 +41,7 @@
             <h3 class="space">Calificacion obtenida: {{ selectedQualification }}</h3>
             <div class="button-group space">
                 <button class="button" (click)="viewQualification()" mat-raised-button>Desglose de nota</button>
-                <button class="button" mat-raised-button>Recomendaciones</button>
+                <button class="button" (click)="checkRecommendations()" mat-raised-button>Recomendaciones</button>
                 <button class="button" (click)="createClaim()" mat-raised-button>Apelar</button>
             </div>
         </div>
