--- a/src/app/components/administrator/dashboard/add-users/add-students/add-students.component.html
+++ b/src/app/components/administrator/dashboard/add-users/add-students/add-students.component.html
@@ -40,8 +40,8 @@
                 <input type="email" matInput formControlName="EmailFormControl" placeholder="Ej. smith@gmail.com">
             </mat-form-field>
             <mat-form-field class="full-width" appearance="outline">
-                <mat-label>Telefono del estudiante</mat-label>
-                <input type="phone" matInput formControlName="PhoneFormControl" placeholder="Ej. smith@gmail.com">
+                <mat-label>Teléfono del estudiante</mat-label>
+                <input type="phone" matInput formControlName="PhoneFormControl" placeholder="88888888">
             </mat-form-field>
             <mat-form-field class="full-width" appearance="outline">
                 <mat-label>Contraseña del estudiante</mat-label>
