Fixed spelling errors on Administration module

--- a/src/app/components/administrator/dashboard/add-users/add-judges/add-judges.component.html
+++ b/src/app/components/administrator/dashboard/add-users/add-judges/add-judges.component.html
@@ -29,7 +29,7 @@
             </div>
             <div class="col-6">
                 <mat-form-field class="full-width" appearance="outline">
-                    <mat-label>Telefono del juez</mat-label>
+                    <mat-label>Teléfono del juez</mat-label>
                     <input type="phone" matInput formControlName="PhoneFormControl" placeholder="8888-8888">
                 </mat-form-field>
             </div>
@@ -44,7 +44,7 @@
             </div>
             <div class="col-6">
                 <mat-form-field class="full-width" appearance="outline">
-                    <mat-label>Posicion del Juez</mat-label>
+                    <mat-label>Posición del Juez</mat-label>
                     <input type="text" matInput formControlName="PositionFormControl">
                 </mat-form-field>
             </div>
