--- a/src/app/components/administrator/dashboard/add-users/add-professors/add-professors.component.html
+++ b/src/app/components/administrator/dashboard/add-users/add-professors/add-professors.component.html
@@ -40,7 +40,7 @@
                 <input type="email" matInput formControlName="EmailFormControl" placeholder="abc@gmail.com">
             </mat-form-field>
             <mat-form-field class="full-width" appearance="outline">
-                <mat-label>Telefono del profesor</mat-label>
+                <mat-label>Teléfono del profesor</mat-label>
                 <input type="phone" matInput formControlName="PhoneFormControl" placeholder="8888-8888">
             </mat-form-field>
             <mat-form-field class="full-width" appearance="outline">
