--- a/src/app/components/administrator/dashboard/fair-documents/fair-documents.component.html
+++ b/src/app/components/administrator/dashboard/fair-documents/fair-documents.component.html
@@ -4,7 +4,7 @@
         <div class="sub-container">
             <form class="example-form">
                 <mat-form-field class="example-full-width" appearance="outline">
-                    <mat-label>Filtrar Documentos</mat-label>
+                    <mat-label>Buscar documentos</mat-label>
                     <input type="text" matInput (keyup)="applyFilter($event)">
                     <mat-icon matSuffix>search</mat-icon>
                 </mat-form-field>
