--- a/src/app/components/administrator/dashboard/manage-users/manage-professors/manage-professors.component.html
+++ b/src/app/components/administrator/dashboard/manage-users/manage-professors/manage-professors.component.html
@@ -1,6 +1,6 @@
 <div class="flex-container">
     <div class="top-options">
-        <h1>Administracion de Profesores</h1>
+        <h1>Administración de Profesores</h1>
         <div class="sub-container">
             <form class="example-form">
                 <mat-form-field class="example-full-width" appearance="outline">
@@ -27,7 +27,7 @@
                 <td mat-cell *matCellDef="let element"> {{element.email}} </td>
             </ng-container>
             <ng-container matColumnDef="phoneNumber">
-                <th mat-header-cell *matHeaderCellDef> Telefono </th>
+                <th mat-header-cell *matHeaderCellDef> Teléfono </th>
                 <td mat-cell *matCellDef="let element"> {{element.phoneNumber}} </td>
             </ng-container>
 
