--- a/src/app/components/administrator/dashboard/settings/reset-password/reset-password.component.html
+++ b/src/app/components/administrator/dashboard/settings/reset-password/reset-password.component.html
@@ -1,7 +1,7 @@
 
 <div class="flex-container">
     <div class="top-options">
-        <h3>Digite la contraseña nueva que desea tener </h3>
+        <h3>Digite la nueva contraseña</h3>
     </div>
 
     <form class="forgetPassword-form flex-container" [formGroup]="ResetPasswordForm" (ngSubmit)="onSubmit()" >
