--- a/src/app/components/administrator/dashboard/side-bar/side-bar.component.html
+++ b/src/app/components/administrator/dashboard/side-bar/side-bar.component.html
@@ -12,7 +12,7 @@
     </div>
     
     <div class="admin-users-options flexbox-container">
-        <h3>Administracion de usuarios</h3>
+        <h3>Administración de usuarios</h3>
         <div class="options">
             <div *ngFor="let user_option of user_options">
                 <div class="option" [routerLink]="[user_option.link]">
@@ -24,7 +24,7 @@
     </div>
 
     <div class="admin-fair-options flexbox-container">
-        <h3>Administracion de feria</h3>
+        <h3>Administración de feria</h3>
         <div class="options">
             <div *ngFor="let fair_option of fair_options">
                 <div class="option " [routerLink]="[fair_option.link]">
