--- a/src/app/components/administrator/dashboard/edit-users/edit-students/edit-students.component.html
+++ b/src/app/components/administrator/dashboard/edit-users/edit-students/edit-students.component.html
@@ -4,31 +4,47 @@
         <h3>Edita los datos necesarios del estudiante seleccionado</h3>
     </div>
     <form class="add-form" [formGroup]="studentForm" (ngSubmit)="onSubmit()">
-        <mat-form-field class="flex-container" appearance="outline">
-            <!--for name-->
-            <mat-label>Nombre del estudiante</mat-label>
-            <input type="name" matInput formControlName="NameFormControl">
-        </mat-form-field>
-        <!--for last-->
-        <mat-form-field class="flex-container" appearance="outline">
-            <mat-label>Apellidos del estudiante</mat-label>
-            <input type="last" matInput formControlName="LastFormControl">
-        </mat-form-field>
-        <!--for email-->
-        <mat-form-field class="flex-container" appearance="outline">
-            <mat-label>Correo del estudiante</mat-label>
-            <input type="email" matInput formControlName="EmailFormControl" placeholder="abc@gmail.com">
-        </mat-form-field>
-        <!--for username-->
-        <mat-form-field class="flex-container" appearance="outline">
-            <mat-label>Nombre de usuario del estudiante</mat-label>
-            <input type="text" matInput formControlName="UsernameFormControl">
-        </mat-form-field>
-        <!--for id-->
-        <mat-form-field class="flex-container" appearance="outline">
-            <mat-label>Cédula del estudiante</mat-label>
-            <input type="id" matInput formControlName="IdFormControl" placeholder="XX-XXXX-XXXX">
-        </mat-form-field>
-        <button mat-raised-button id="sumbit-button" class="add-button">Editar Estudiante</button>
+        <div class="row">
+            <div class="col-6">
+                <mat-form-field class="full-width" appearance="outline">
+                    <mat-label>Nombre del estudiante</mat-label>
+                    <input type="text" matInput formControlName="NameFormControl">
+                </mat-form-field>
+            </div>
+            <div class="col-6">
+                <mat-form-field class="full-width" appearance="outline">
+                    <mat-label>Apellidos del estudiante</mat-label>
+                    <input type="text" matInput formControlName="LastFormControl">
+                </mat-form-field>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-6">
+                <mat-form-field class="full-width" appearance="outline">
+                    <mat-label>Nombre de usuario del estudiante</mat-label>
+                    <input type="text" matInput formControlName="UsernameFormControl">
+                </mat-form-field>
+            </div>
+            <div class="col-6">
+                <mat-form-field class="full-width" appearance="outline">
+                    <mat-label>Cédula del estudiante</mat-label>
+                    <input type="text" matInput formControlName="IdFormControl" placeholder="XX-XXXX-XXXX">
+                </mat-form-field>
+            </div>
+        </div>
+
+        <div class="rows">
+            <mat-form-field class="full-width" appearance="outline">
+                <mat-label>Correo del estudiante</mat-label>
+                <input type="email" matInput formControlName="EmailFormControl" placeholder="abc@gmail.com">
+            </mat-form-field>
+        </div>
+
+        <div class="div-buttons">
+            <button mat-raised-button routerLink="/administrator/manage-students" class="button cancel">Cancelar</button>
+            <button mat-raised-button id="submit-button" class="button">Editar Estudiante</button>
+        </div>
+
     </form>
 </div>
