--- a/src/app/components/administrator/dashboard/manage-users/manage-judges/manage-judges.component.html
+++ b/src/app/components/administrator/dashboard/manage-users/manage-judges/manage-judges.component.html
@@ -1,10 +1,10 @@
 <div class="flex-container">
     <div class="top-options">
-        <h1>Administracion de Jueces</h1>
+        <h1>Administración de Jueces</h1>
         <div class="sub-container">
             <form class="example-form">
                 <mat-form-field class="example-full-width" appearance="outline">
-                    <mat-label>Buscar jueces</mat-label>
+                    <mat-label>Buscar Jueces</mat-label>
                     <input type="text" matInput (keyup)="applyFilter($event)" placeholder="Ingrese nombre del juez">
                     <mat-icon matSuffix>search</mat-icon>
                 </mat-form-field>
@@ -28,7 +28,7 @@
                 <td mat-cell *matCellDef="let element"> {{element.email}} </td>
             </ng-container>
             <ng-container matColumnDef="phoneNumber">
-                <th mat-header-cell *matHeaderCellDef> Telefono </th>
+                <th mat-header-cell *matHeaderCellDef> Télefono </th>
                 <td mat-cell *matCellDef="let element"> {{element.phoneNumber}} </td>
             </ng-container>
             <ng-container matColumnDef="institution">
