--- a/src/app/components/judges/dashboard/projects-list/projects-list.component.html
+++ b/src/app/components/judges/dashboard/projects-list/projects-list.component.html
@@ -19,18 +19,14 @@
                 <td mat-cell *matCellDef="let element"> {{element.name}} </td>
             </ng-container>
             <ng-container matColumnDef="description">
-                <th mat-header-cell *matHeaderCellDef> Descripcion </th>
+                <th mat-header-cell *matHeaderCellDef> Descripción </th>
                 <td mat-cell *matCellDef="let element"> {{element.description}} </td>
             </ng-container>
-            <!--<ng-container matColumnDef="files">
-                <th mat-header-cell *matHeaderCellDef> Documentación </th>
-                <td mat-cell *matCellDef="let element"> {{element.files}} </td>
-            </ng-container>-->
 
             <!--Button-->
             <ng-container matColumnDef="id">
             <th mat-header-cell *matHeaderCellDef>Calificar</th>
-            <td mat-cell *matCellDef="let element">
+                <td mat-cell *matCellDef="let element">
                     <mat-icon [routerLink]="['/judges/project-details/', element.id]" class="btn_calificar">border_color</mat-icon>
                 </td>
             </ng-container>
