--- a/src/app/components/judges/dashboard/side-bar/side-bar.component.html
+++ b/src/app/components/judges/dashboard/side-bar/side-bar.component.html
@@ -1,6 +1,6 @@
 <div class="side-bar-menu">
     <div class="jugde-projects-options flexbox-container">
-        <h3>Calificar Proyectos</h3>
+        <h3>Calificación de proyectos</h3>
         <div class="options">
             <div *ngFor="let project_option of project_options">
                 <div class="option" [routerLink]="[project_option.link]">
@@ -24,7 +24,7 @@
     </div>
 
     <div class="judge-student-options flexbox-container">
-        <h3>Estudiantes</h3>
+        <h3>Lista de estudiantes</h3>
         <div class="options">
             <div *ngFor="let student_option of student_options">
                 <div class="option" [routerLink]="[student_option.link]">
