--- a/src/app/components/judges/dashboard/students-list/students-list.component.html
+++ b/src/app/components/judges/dashboard/students-list/students-list.component.html
@@ -4,7 +4,7 @@
         <div class="sub-container">
             <form class="example-form">
                 <mat-form-field class="example-full-width" appearance="outline">
-                    <mat-label>Buscar estudiantes</mat-label>
+                    <mat-label>Buscar Estudiantes</mat-label>
                     <input type="text" matInput (keyup)="applyFilter($event)" placeholder="Ingrese nombre del estudiante">
                     <mat-icon matSuffix>search</mat-icon>
                 </mat-form-field>
@@ -16,7 +16,7 @@
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
             <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef> Nombre </th>
-                <td mat-cell *matCellDef="let element" [routerLink]="['/judges/project-details', element.projectId]" routerLinkActive="router-link-active"> {{element.name}} </td>
+                <td mat-cell *matCellDef="let element" [routerLink]="['/judges/project-details', element.projectId]" routerLinkActive="router-link-active" class="redirect"> {{element.name}} </td>
             </ng-container>
             <ng-container matColumnDef="lastName">
                 <th mat-header-cell *matHeaderCellDef> Apellido </th>
@@ -28,7 +28,7 @@
             </ng-container>
             <ng-container matColumnDef="projectName">
                 <th mat-header-cell *matHeaderCellDef> Proyecto </th>
-                <td mat-cell *matCellDef="let element" [routerLink]="['/judges/project-details', element.projectId]" routerLinkActive="router-link-active"> {{element.projectName}} </td>
+                <td mat-cell *matCellDef="let element" [routerLink]="['/judges/project-details', element.projectId]" routerLinkActive="router-link-active" class="redirect"> {{element.projectName}} </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
