Fixed spelling errors on Students module

--- a/src/app/components/administrator/dashboard/settings/settings.component.html
+++ b/src/app/components/administrator/dashboard/settings/settings.component.html
@@ -41,10 +41,10 @@
                 </mat-form-field>
                 <!--for password-->
                 <mat-form-field class="" appearance="outline">
-                    <mat-label>CNúmero de teléfono</mat-label>
+                    <mat-label>Número de celular</mat-label>
                     <input type="last" matInput [formControl]="PhoneFormControl" [errorStateMatcher]="matcher">
                     <mat-error *ngIf=" PhoneFormControl.hasError('required')">
-                        <strong>Por favor digita su número de teléfono</strong>
+                        <strong>Por favor digita su número de celular</strong>
                     </mat-error>
                 </mat-form-field>
 
