--- a/src/app/components/students/dashboard/current-documentation/current-documentation.component.html
+++ b/src/app/components/students/dashboard/current-documentation/current-documentation.component.html
@@ -1,10 +1,10 @@
 <div class="flex-container">
     <div class="top-options">
-        <h1>Documentos de la Feria</h1>
+        <h1>Documentación del proyecto</h1>
         <div class="sub-container">
             <form class="example-form">
                 <mat-form-field class="example-full-width" appearance="outline">
-                    <mat-label>Buscar documentos</mat-label>
+                    <mat-label>Buscar Documentos</mat-label>
                     <input type="text" matInput placeholder="Ingrese nombre del documento">
                     <mat-icon matSuffix>search</mat-icon>
                 </mat-form-field>
