--- a/src/app/components/students/dashboard/side-bar/side-bar.component.html
+++ b/src/app/components/students/dashboard/side-bar/side-bar.component.html
@@ -1,6 +1,6 @@
 <div class="side-bar-menu">
     <div class="admin-team-options flexbox-container">
-        <h3>Administracion de equipo</h3>
+        <h3>Administración de equipo</h3>
         <div class="options">
             <div *ngFor="let user_option of user_options">
                 <div class="option" [routerLink]="[user_option.link]">
@@ -11,7 +11,7 @@
         </div>
     </div>
     <div class="admin-project-options flexbox-container">
-        <h3>Administracion del proyecto</h3>
+        <h3>Administración del proyecto</h3>
         <div class="options">
             <div *ngFor="let project_option of project_admin_options ">
                 <div class="option " [routerLink]="[project_option.link] ">
