--- a/src/app/components/students/dashboard/create-project/create-project.component.html
+++ b/src/app/components/students/dashboard/create-project/create-project.component.html
@@ -11,44 +11,44 @@
                             <mat-label>Nombre del proyecto</mat-label>
                             <input type="text" matInput formControlName="Name">
                             <mat-error *ngIf="newProjectForm.controls['Name'].hasError('whitespace')">
-                                Por favor elimina los espacios en blanco del form 
+                                Por favor elimina los espacios en blanco del formulario 
                             </mat-error>
                         </mat-form-field>
                         <mat-form-field class="variable-width" hintLabel="Max 400 caracteres" appearance="outline">
-                            <mat-label>Descripcion del proyecto</mat-label>
+                            <mat-label>Descripción del proyecto</mat-label>
                             <textarea #txtArea matInput [maxlength]="400" formControlName="Description"></textarea>
                             <mat-hint align="end">{{txtArea.value?.length || 0}}/400</mat-hint>
                         </mat-form-field>
                         <mat-form-field class="variable-width" appearance="outline">
-                            <mat-label>Lider del proyecto</mat-label>
+                            <mat-label>Líder del proyecto</mat-label>
                             <input type="text" matInput formControlName="Lider">
                             <mat-error *ngIf="newProjectForm.controls['Lider'].hasError('whitespace')">
-                                Por favor elimina los espacios en blanco del form 
+                                Por favor elimina los espacios en blanco del formulario 
                             </mat-error>
                         </mat-form-field>
                         <mat-form-field class="variable-width" appearance="outline">
-                            <mat-label>Integrante del grupo 2</mat-label>
+                            <mat-label>Segundo integrante del grupo</mat-label>
                             <input type="text" matInput formControlName="Member2">
                             <mat-error *ngIf="newProjectForm.controls['Member2'].hasError('whitespace')">
-                                Por favor elimina los espacios en blanco del form 
+                                Por favor elimina los espacios en blanco del formulario 
                             </mat-error>
                         </mat-form-field>
                         <mat-form-field class="variable-width" appearance="outline">
-                            <mat-label>Integrante del grupo 3</mat-label>
+                            <mat-label>Tercer integrante del grupo</mat-label>
                             <input type="text" matInput formControlName="Member3">
                             <mat-error *ngIf="newProjectForm.controls['Member3'].hasError('whitespace')">
-                                Por favor elimina los espacios en blanco del form 
+                                Por favor elimina los espacios en blanco del formulario 
                             </mat-error>
                         </mat-form-field>
                         <mat-form-field class="variable-width" appearance="outline" >
-                            <mat-label>Categoria del proyecto</mat-label>
+                            <mat-label>Categoría del proyecto</mat-label>
                             <mat-select formControlName="Category" name="Category">
                                 <mat-option *ngFor="let category of this.categories" [value]="category.id" >
                                     {{category.description}}   
                                 </mat-option>
                             </mat-select>
                             <mat-error *ngIf="!newProjectForm.controls['Category'].valid && newProjectForm.controls['Category'].touched">
-                                Categoria es requerida
+                                La categoría es requerida
                               </mat-error>
                         </mat-form-field>
                         <mat-form-field class="variable-width invisible" appearance="outline">
@@ -62,7 +62,7 @@
         <mat-divider vertical style="height:85%; margin: 0 5%;"></mat-divider>
         <div class="left-side">
             <div class="title">
-                <h1>Inserte los documentos de inscripcion del proyecto para la Expo-Ingenieria</h1>
+                <h1>Inserte los documentos de inscripción del proyecto para la Expo-Ingeniería</h1>
             </div>
             <div class="center">
                 <ngx-file-drop dropZoneLabel="Drop files here" (onFileDrop)="dropped($event)" (onFileOver)="fileOver($event)" (onFileLeave)="fileLeave($event)">
