--- a/src/app/components/students/dashboard/documentation/documentation.component.html
+++ b/src/app/components/students/dashboard/documentation/documentation.component.html
@@ -4,7 +4,7 @@
         <div class="sub-container">
             <form class="example-form">
                 <mat-form-field class="example-full-width" appearance="outline">
-                    <mat-label>Buscar documentos</mat-label>
+                    <mat-label>Buscar Documentos</mat-label>
                     <input type="text" matInput placeholder="Ingrese nombre del documento">
                     <mat-icon matSuffix>search</mat-icon>
                 </mat-form-field>
