--- a/src/app/components/students/dashboard/mentions/mentions.component.html
+++ b/src/app/components/students/dashboard/mentions/mentions.component.html
@@ -4,7 +4,7 @@
         <div class="sub-container">
             <form class="example-form">
                 <mat-form-field class="example-full-width" appearance="outline">
-                    <mat-label>Filtrar menciones</mat-label>
+                    <mat-label>Buscar Menciones</mat-label>
                     <input type="text" matInput placeholder="Ejemplo: Innovacion">
                     <mat-icon matSuffix>search</mat-icon>
                 </mat-form-field>
@@ -14,11 +14,11 @@
     <div class="mentions-content">
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
             <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef> Nombre de la mencion</th>
+                <th mat-header-cell *matHeaderCellDef> Nombre de la mención</th>
                 <td mat-cell *matCellDef="let element"> {{element.name}} </td>
             </ng-container>
             <ng-container matColumnDef="description">
-                <th mat-header-cell *matHeaderCellDef> Descripcion </th>
+                <th mat-header-cell *matHeaderCellDef> Descripción </th>
                 <td mat-cell *matCellDef="let element"> {{element.description}} </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
