--- a/src/app/components/students/dashboard/project-group/project-group.component.html
+++ b/src/app/components/students/dashboard/project-group/project-group.component.html
@@ -4,7 +4,7 @@
         <div class="sub-container">
             <form class="example-form">
                 <mat-form-field class="example-full-width" appearance="outline">
-                    <mat-label>Buscar jueces</mat-label>
+                    <mat-label>Buscar Integrantes</mat-label>
                     <input type="text" matInput placeholder="Ingrese nombre del estudiante">
                     <mat-icon matSuffix>search</mat-icon>
                 </mat-form-field>
@@ -27,7 +27,7 @@
                 <td mat-cell *matCellDef="let element"> {{element.email}} </td>
             </ng-container>
             <ng-container matColumnDef="phone">
-                <th mat-header-cell *matHeaderCellDef> Telefono </th>
+                <th mat-header-cell *matHeaderCellDef> Teléfono </th>
                 <td mat-cell *matCellDef="let element"> {{element.phone}} </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -40,7 +40,7 @@
                 </td>
             </ng-container>
             <ng-container matColumnDef="admin">
-                <th mat-header-cell *matHeaderCellDef>Make admin?</th>
+                <th mat-header-cell *matHeaderCellDef>¿Hacer líder del proyecto?</th>
                 <td mat-cell *matCellDef="let row">
                     <mat-checkbox></mat-checkbox>
                 </td>
