--- a/src/app/components/students/dashboard/protocol-list/protocol-list.component.html
+++ b/src/app/components/students/dashboard/protocol-list/protocol-list.component.html
@@ -4,7 +4,7 @@
         <div class="sub-container">
             <form class="example-form">
                 <mat-form-field class="example-full-width" appearance="outline">
-                    <mat-label>Buscar protocolo</mat-label>
+                    <mat-label>Buscar Protocolos</mat-label>
                     <input type="text" matInput placeholder="Buscar protocolo">
                     <mat-icon matSuffix>search</mat-icon>
                 </mat-form-field>
@@ -18,7 +18,7 @@
                 <td mat-cell *matCellDef="let element"> {{element.name}} </td>
             </ng-container>
             <ng-container matColumnDef="description">
-                <th mat-header-cell *matHeaderCellDef>Descripcion</th>
+                <th mat-header-cell *matHeaderCellDef>Descripción</th>
                 <td mat-cell *matCellDef="let element"> {{element.description}} </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
