--- a/src/app/components/students/dashboard/recommendations/recommendations.component.html
+++ b/src/app/components/students/dashboard/recommendations/recommendations.component.html
@@ -12,7 +12,7 @@
         </ng-container>
         <!-- Qualification Column -->
         <ng-container matColumnDef="recommendation">
-          <th mat-header-cell *matHeaderCellDef> Recomendacion </th>
+          <th mat-header-cell *matHeaderCellDef> Recomendación </th>
           <td mat-cell *matCellDef="let element"> {{element.recomendacion}} </td>
         </ng-container>   
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
