--- a/src/app/components/administrator/dashboard/edit-users/edit-professors/edit-professors.component.html
+++ b/src/app/components/administrator/dashboard/edit-users/edit-professors/edit-professors.component.html
@@ -27,8 +27,8 @@
             </div>
             <div class="col-6">
                 <mat-form-field class="full-width" appearance="outline">
-                    <mat-label>Cédula del profesor</mat-label>
-                    <input type="text" matInput formControlName="IdFormControl" placeholder="XX-XXXX-XXXX">
+                    <mat-label>Telefono del profesor</mat-label>
+                    <input type="text" matInput formControlName="PhoneFormControl" placeholder="XX-XXXX-XXXX">
                 </mat-form-field>
             </div>
         </div>
