--- a/src/app/components/administrator/dashboard/edit-users/edit-students/edit-students.component.html
+++ b/src/app/components/administrator/dashboard/edit-users/edit-students/edit-students.component.html
@@ -28,8 +28,8 @@
             </div>
             <div class="col-6">
                 <mat-form-field class="full-width" appearance="outline">
-                    <mat-label>Cédula del estudiante</mat-label>
-                    <input type="text" matInput formControlName="IdFormControl" placeholder="XX-XXXX-XXXX">
+                    <mat-label>Telefono del estudiante</mat-label>
+                    <input type="text" matInput formControlName="PhoneFormControl" placeholder="XX-XXXX-XXXX">
                 </mat-form-field>
             </div>
         </div>
