--- a/src/app/components/students/dashboard/protocol-list/protocol-list.component.html
+++ b/src/app/components/students/dashboard/protocol-list/protocol-list.component.html
@@ -14,7 +14,7 @@
     <div class="protocols-content">
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
             <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef>Numero de protocolo</th>
+                <th mat-header-cell *matHeaderCellDef>Número de protocolo</th>
                 <td mat-cell *matCellDef="let element"> {{element.name}} </td>
             </ng-container>
             <ng-container matColumnDef="description">
