--- a/src/app/components/judges/dashboard/settings/settings.component.html
+++ b/src/app/components/judges/dashboard/settings/settings.component.html
@@ -25,7 +25,7 @@
 
                 <mat-form-field class="" appearance="outline">
                     <!--for name-->
-                    <mat-label>Correo Electronico</mat-label>
+                    <mat-label>Correo Electrónico</mat-label>
                     <input type="email" matInput formControlName="EmailFormControl">
                 </mat-form-field>
 
@@ -37,7 +37,7 @@
 
                 <mat-form-field class="" appearance="outline">
                     <!--for name-->
-                    <mat-label>Telefono</mat-label>
+                    <mat-label>Teléfono</mat-label>
                     <input type="phone" matInput formControlName="PhoneFormControl">
                 </mat-form-field>
                 <div class="bottom">
