add otherQualifcations pop up component

--- a/src/app/components/judges/dashboard/projects-list/projects-list.component.css
+++ b/src/app/components/judges/dashboard/projects-list/projects-list.component.css
@@ -59,6 +59,14 @@ table {
     -ms-flex-item-align: center;
 }
 
+.btn_calificaciones{
+    color: #354F52;
+    font-size: 16pt;
+    cursor: pointer;
+    -ms-flex-item-align: center;
+}
+
+
 .example-full-width{
     margin-right: 2dp;
 }
