--- a/src/app/components/judges/dashboard/projects-list/projects-list.component.html
+++ b/src/app/components/judges/dashboard/projects-list/projects-list.component.html
@@ -30,6 +30,12 @@
                     <mat-icon [routerLink]="['/judges/project-details/', element.id]" class="btn_calificar">border_color</mat-icon>
                 </td>
             </ng-container>
+               <ng-container matColumnDef="actions">
+            <th mat-header-cell *matHeaderCellDef>Calificaciones</th>
+                <td mat-cell *matCellDef="let element">
+                    <mat-icon (click)="otherQualifications(element.id)" class="btn_calificaciones">domain_verification</mat-icon>
+                </td>
+            </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
