remove password fields

--- a/src/app/components/administrator/dashboard/add-users/add-professors/add-professors.component.html
+++ b/src/app/components/administrator/dashboard/add-users/add-professors/add-professors.component.html
@@ -43,10 +43,10 @@
                 <mat-label>Teléfono del profesor</mat-label>
                 <input type="phone" matInput formControlName="PhoneFormControl" placeholder="8888-8888">
             </mat-form-field>
-            <mat-form-field class="full-width" appearance="outline">
+            <!-- <mat-form-field class="full-width" appearance="outline">
                 <mat-label>Contraseña del profesor</mat-label>
                 <input type="password" matInput formControlName="PasswordFormControl">
-            </mat-form-field>
+            </mat-form-field> -->
         </div>
 
         <div class="div-buttons">
