--- a/src/app/components/administrator/dashboard/add-users/add-judges/add-judges.component.html
+++ b/src/app/components/administrator/dashboard/add-users/add-judges/add-judges.component.html
@@ -55,10 +55,10 @@
                 <mat-label>Correo del juez</mat-label>
                 <input type="email" matInput formControlName="EmailFormControl" placeholder="abc@gmail.com">
             </mat-form-field>
-            <mat-form-field class="full-width" appearance="outline">
+            <!-- <mat-form-field class="full-width" appearance="outline">
                 <mat-label>Contraseña del juez</mat-label>
                 <input type="password" matInput formControlName="PasswordFormControl">
-            </mat-form-field>
+            </mat-form-field> -->
             <mat-form-field class="full-width" appearance="outline">
                 <mat-label>Cédula del juez</mat-label>
                 <input type="text" matInput formControlName="IdFormControl" placeholder="XX-XXXX-XXXX">
